--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta name="X-UA-Compatible" content="IE=edge"/>
 		<meta name="keywords" content="秘书学系"/>
 		<meta name="description" content="XX大学秘书学系"/>
+		<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 		<title>威华挂车厂</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css"/>
 
