--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
 		<meta name="X-UA-Compatible" content="IE=edge"/>
 		<meta name="keywords" content="秘书学系"/>
 		<meta name="description" content="XX大学秘书学系"/>
-		<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+		<!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
 		<title>威华挂车厂</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css"/>
 		<style type="text/css">
@@ -13,7 +13,7 @@
 			.iw_poi_title {color:#CC5522;font-size:14px;font-weight:bold;overflow:hidden;padding-right:13px;white-space:nowrap}
 			.iw_poi_content {font:12px arial,sans-serif;overflow:visible;padding-top:4px;white-space:-moz-pre-wrap;word-wrap:break-word}
 		</style>
-		<script type="text/javascript" src="http://api.map.baidu.com/api?key=&v=1.1&services=true"></script>
+		<script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=qWmCfqDAdPBzy3YoHxGnimKT&s=1"></script>
 	</head>
 	<body>
 		<!--header-->
