--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 		}
 		//创建一个Icon
 		function createIcon(json){
-			var icon = new BMap.Icon("", new BMap.Size(json.w,json.h),{imageOffset: new BMap.Size(-json.l,-json.t),infoWindowOffset:new BMap.Size(json.lb+5,1),offset:new BMap.Size(json.x,json.h)})
+			var icon = new BMap.Icon("images/adr.png", new BMap.Size(json.w,json.h),{imageOffset: new BMap.Size(-json.l,-json.t),infoWindowOffset:new BMap.Size(json.lb+5,1),offset:new BMap.Size(json.x,json.h)})
 			return icon;
 		}
 		
